--- a/paper.tex
+++ b/paper.tex
@@ -56,7 +56,7 @@
 My work builds upon existing programming-based game theory exercises assigned in Princeton's COS 445 ``Economics and Computing''.
 The intention of these strategy design exercises is to teach students how to use game theory to analyze a real-world situation and work rationally within a healthy incentive structure, e.g.\ one in which students do not try to hurt each others’ performance.
 Each past offering of the course has rebuilt these assignments, and all associated instructor tooling, from scratch, resulting in unnecessarily high allocation of instructor time to grading.
-Additionally, the course has grown rapidly to become the single largest theoretical computer science course ever taught at Princeton.\footnote{More students complete COS 340 in a given year, but it is taught in both fall and spring semesters.}~\cite{coursesizes}
+Additionally, the course has grown rapidly to become the single largest theoretical computer science course ever taught at Princeton~\cite{coursesizes}.\footnote{More students complete COS 340 in a given year, but it is taught in both fall and spring semesters.}
 
 The goals of this project are to discover to what degree the development of new strategy design exercises can be simplified or automated, to improve the student resources available during the completion of these exercises, and to create institutional memory and decrease year-to-year repetition.
 This was accomplished by designing a modular, extensible, and reusable framework which embodies the commonality between strategy design exercises, allowing instructors to create new exercises while changing only the necessary, assignment-specific details, by developing more advanced automated grading tools than previously existed for the course.
@@ -69,13 +69,40 @@ Quantitative metrics, including software failure rates and instructor time usage
 Four Princeton University departments offer courses in game theory: Economics, Politics, Mathematics, and Computer Science.
 While all of these courses teach the core concepts of game theory, each also connects this core to relevant examples and topics in its department.
 For instance, the Computer Science department's ``Economics and Computing'' places emphasis on the connections between game-theoretic results and algorithms, software, and other aspects of computer science.
-The course focuses on the relevance of game theory to matchings, auctions, cryptocurrencies, and other multi-actor computational systems.~\cite{https://www.cs.princeton.edu/~smattw/Teaching/cos445sp18.htm}
+The course focuses on the relevance of game theory to matchings, auctions, cryptocurrencies, and other multi-actor computational systems~\cite{cos445sp18}.
 It is also represented in the design of the problem sets, which, in addition to traditional proof-based exercises, contain programming-based exercises which connect course topics to prerequisite computer science skills.
 These programming-based exercises take a common form.
 
 Students are presented with an iterated game, described both in the assignment handout and as a Java interface.
-A classic iterated game is the iterated prisoner's dilemma,\footnote{Figure: PD game -> Java interface} in which two players must collaborate to receive the best outcome and have access to the other player's previous decisions when making their own decision.
+A classic iterated game is the iterated prisoner's dilemma, as in Figure~\ref{fig:pd},
+\begin{figure}[hbt]
+  \centering
+  \includegraphics[scale=0.5]{pd.png}
+  \caption{The payoffs of each round of the iterated prisoner's dilemma.}\label{fig:pd}
+\end{figure}
+in which two players must collaborate to receive the best outcome and have access to the other player's previous decisions when making their own decision.
 Players balance the incentive to defect, which improves their own situation while damaging their opponent, with the knowledge that their opponent may defect in future rounds punish them if they defect now.
+This game translates to the interface in Figure~\ref{minted:Prisoner}.
+\begin{figure}[hbt]
+\begin{minted}{java}
+    public static <Student_T extends Student> int[] withExtraTrial(
+            Class<Student_T> clazz, double S, double T, double W)
+    {
+        // Initialize students
+        Student[] students = new Student[N+1];
+        //R students[{0}] = new Student_{netID}();//
+        try {
+            students[N] = clazz.getConstructor().newInstance();
+        } catch (ReflectiveOperationException roe) {
+            roe.printStackTrace();
+            System.exit(1);
+        }
+
+        return runTrial(students, S, T, W);
+    }
+\end{minted}
+  \caption{\texttt{interface Prisoner} demonstrates a strategy interface}\label{minted:Prisoner}
+\end{figure}
 While this game is well-studied and models some real-world incentive structures, the course also draws on various real-world phenomenon to design iterated games, including a college admissions game from the perspective of stable matchings, a search advertisement bidding game using auction theory, an election informed by voting theory, a gerrymandering-prevention simulation inspired by fair division, and exploitation of a fictional cryptocurrency by analyzing blockchain incentives.
 These examples are not exhaustive, but illustrate the variety of course topics with potential for translation to iterated games.
 
@@ -93,44 +120,44 @@ These strategy design exercises are intended to help students place theoretical 
 They create a scenario in which mastery of theoretical course content is demonstrated by making and justifying real-world decisions.
 Professor Weinberg's intent is that no student should experience difficulty implementing their strategy, and all of the challenge should come from developing a creative, successful strategy.
 
-While the strategy design exercises assignments are popular with students~\cite{https://reg-captiva.princeton.edu/chart/index.php?terminfo=1184\&courseinfo=012095 requires CAS login}, they also demand dedication of considerable instructor resources to building software for student handouts and strategy evaluation, which have historically been significantly rebuilt for each assignment.
+While the strategy design exercises assignments are popular with students~\cite{cos445sp17review}, they also demand dedication of considerable instructor resources to building software for student handouts and strategy evaluation, which have historically been significantly rebuilt for each assignment.
 Worse still, due to course staffing changes, this work has not been preserved between semesters, resulting in inefficient allocation of department resources to producing new exercises without the institutional memory or software resources previously developed.
 Due to the limited tooling provided in past semesters for students to test their code, many submissions did not compile or caused run-time exceptions, requiring considerable additional instructor resources.
 
 
 \section*{Related Work}
-This work was developed to replace previous software design exercises assigned to COS 445 students\footnote{including the author} in Spring 2017.~\cite{https://web.archive.org/web/20170916042726/https://www.cs.princeton.edu/~smattw/Teaching/cos445sp17.htm}
+This work was developed to replace previous software design exercises assigned to COS 445 students\footnote{including the author} in Spring 2017~\cite{cos445sp17}.
 In one problem set, students developed and implemented strategies for three different strategy design exercises related to three different abstract games: Prisoner's Dilemma, Centipede, and Ultimatum.
 In a later problem set, an exercise placed students in the role of bidders in a generalized second-price auction.\footnote{A G.S.P.\ auction is an auction of multiple items, one after another, where the winning bid pays the second highest bid. This is the auction format used by Google to sell sponsored search auctions.}
 
-Both problem sets were implemented and graded by Cyril Zhang~\cite{https://github.com/cyrilzhang}, a graduate student TA for the course.
-Zhang developed interfaces, dummy implementations, and grader software for each strategy design exercise.~\cite{https://github.com/PrincetonUniversity/cos445-hw/tree/s17 requires invite: contact author or department}
+Both problem sets were implemented and graded by Cyril Zhang~\cite{cyrilzhang}, a graduate student TA for the course.
+Zhang developed interfaces, dummy implementations, and grader software for each strategy design exercise~\cite{s17}.
 However, his implementation of software for strategy design assignments was intended for grader use only.
 It is not modular and has to be completely rewritten for each assignment.
 The student interfaces were documented, but the grader software was not documented for future use.
 Additionally, some of the scripts and notebooks used by Zhang were not preserved and were not accessible as resources.
 Thus, while these resources served as inspiration for this work and provided some assignment-specific code to my work developing specific assignments, I did not build directly on Zhang's code.
 
-Prior to Spring 2017, COS 445 was taught by Professor Mark Braverman in Fall 2012 and Spring 2014~\cite{https://precourser.io/course/1184012095 requires Princeton CAS authentication}.
+Prior to Spring 2017, COS 445 was taught by Professor Mark Braverman in Fall 2012 and Spring 2014~\cite{coursehistory}.
 Though no documentation or archives of the course homepage from these semesters is available online or in the Internet Archive, I recovered some resources from the course account on the ``Cycles'' cluster of the Princeton Computer Science department and from the source code repositories used by the course staff.
-In both semesters, Yonatan Naamad,~\cite{https://github.com/ynaamad/} a former graduate student TA for the course, was responsible for software development.
+In both semesters, Yonatan Naamad~\cite{ynaamad}, a former graduate student TA for the course, was responsible for software development.
 
-The only resources available from Fall 2012 were collected from the course Google Code repository.~\cite{https://code.google.com/archive/p/cos445-scripts/}
+The only resources available from Fall 2012 were collected from the course Google Code repository~\cite{googlecode}.
 This repository contains incomplete Python skeleton code for a basic tournament of an unspecified game.
-I uploaded this code to the current course repository~\cite{https://github.com/PrincetonUniversity/cos445-hw/tree/f12 requires invite: contact author or department} but did not develop it further.
+I uploaded this code to the current course repository~\cite{f12} but did not develop it further.
 
-The Spring 2014 iteration of the course was developed on a private GitHub repository.~\cite{https://github.com/ynaamad/cos445}
+The Spring 2014 iteration of the course was developed on a private GitHub repository at ynaamad:cos445, which I am unable to access directly.
 Through a clone of this repository stored on Cycles, I discovered that the course had PHP and Java implementations of strategy design exercises for Prisoner's Dilemma and another auction setting.
 The Java code was the student handout, which contained strategy interfaces and some testing code.
 The testing code was not designed to be automated for grading and was not modular.
 It tested manually-entered strategies against each other, and assignment-specific details such as game structure and payoffs were integrated within the simulation code.
 As a design decision I dismissed the available PHP code, which was used for course grading, due to language unfamiliarity.
-These resources were uploaded to the current course repository,~\cite{https://github.com/PrincetonUniversity/cos445-hw/tree/s14 requires invite: contact author or department} but were not reused, in part because they were located and examined only when I was given access to the course site in order to deploy my project.
+These resources were uploaded to the current course repository~\cite{s14}, but were not reused, in part because they were located and examined only when I was given access to the course site in order to deploy my project.
 
 Beyond COS 445 at Princeton, many universities have taught computer science courses in algorithmic game theory.
-However, a survey of several universities' courses, including courses at Harvard~\cite{https://beta.blogs.harvard.edu/k108875/}, Stanford~\cite{https://theory.stanford.edu/~tim/364a.html}~\cite{https://theory.stanford.edu/~tim/f16/f16.html}, Cornell~\cite{https://www.cs.cornell.edu/courses/cs6840/2014sp/}, U.\ Washington~\cite{https://courses.cs.washington.edu/courses/cse522/05sp/}, Yale~\cite{https://zoo.cs.yale.edu/classes/cs455/fall11/}, U.\ Penn~\cite{https://www.cis.upenn.edu/~aaroth/courses/agtS15.html}, Georgia Tech~\cite{https://web.archive.org/web/20131002121909/https://www.cc.gatech.edu/\%7Eninamf/LGO10/index.html}, Carnegie Mellon~\cite{https://www.cs.cmu.edu/~arielpro/15896s16/index.html}, and Duke~\cite{https://www2.cs.duke.edu/courses/spring16/compsci590.4/}, identified only one other course with similarly-structured assignments.
+However, a survey of several universities' courses, including courses at Harvard~\cite{harvard}, Stanford~\cite{stanford364a}~\cite{stanfordf16}, Cornell~\cite{cornell}, U.\ Washington~\cite{uw}, Yale~\cite{yale}, U.\ Penn~\cite{penn}, Georgia Tech~\cite{gtech}, MIT~\cite{mit}, Carnegie Mellon~\cite{cmu}, and Duke~\cite{duke}, identified only one other course with similarly-structured assignments.
 
-Harvard's Computer Science 136, ``Economics and Computation''~\cite{https://beta.blogs.harvard.edu/k108875/assignments/}, assigns two programming problem sets.
+Harvard's Computer Science 136, ``Economics and Computation''~\cite{harvard}, assigns two programming problem sets.
 The first requires implementation of a peer-to-peer file sharing system similar to BitTorrent, a protocol in which incentives parallel Prisoner's Dilemma.
 However, the assignment is not a competition and student solutions are not differentiated based on strategic properties.
 The second assignment is a strategy design exercise built on the generalized second-price auction, in which student strategies vary and are graded based on their performance in a competitive environment.
@@ -144,7 +171,7 @@ Such resources are useful in the general case of developing new programming-base
 Most auto-grading systems are designed with an assumption that each student submission is graded in isolation from other student submissions.
 Such systems are not applicable to this project since the strategy design exercises involve evaluation of student strategy performance in a common environment.
 Though existing automatic grading systems cannot replicate the full extent of this work, I have integrated existing resources for assignment submission and student feedback to perform smaller tasks within a larger system.
-I integrated CS DropBox~\cite{https://csguide.cs.princeton.edu/academic/csdropbox} functionality where relevant, and I modeled the leaderboard structure after review of the leaderboard implementation used in other Princeton CS classes.
+I integrated CS DropBox~\cite{csdropbox} functionality where relevant, and I modeled the leaderboard structure after review of the leaderboard implementation used in other Princeton CS classes.
 Generally, no such tools would leverage the high degree of structural similarity between strategy design exercises, and a dedicated project for these exercises will allow for more efficient development and evaluation.
 
 \section*{Approach}
@@ -158,11 +185,11 @@ While I was initially inclined to pursue implementation in Java, I spent conside
 This was necessary because I would incur a considerable cost to myself and to others ere I to change programming languages partway through the semester.
 I would have to rebuild all previous work, and I would inconvenience all the students of COS 445 by making them change languages and wasting their time learning the abandoned language.
 
-Many students suggested the assignments be implemented in Python,~\cite{per survey 1 results} and this would be preferred by the course staff as well.
+Many students suggested the assignments be implemented in Python,\footnote{TODO: per survey 1 results} and this would be preferred by the course staff as well.
 Members of the Mechanism Design group are not expected to have working proficiency with Java, but many have enough experience with Python to support students.
 Additionally, Python's conciseness and ability to load classes from user input would be useful when implementing tools which are parameterized on user-input strategy names.
 Unfortunately, COS 445's prerequisite courses only provide Java experience, and not Python experience, so students reasonably expect they will only be asked to write Java code.
-Data from other course surveys indicate that 90\% of students report themselves fluent in Java after the Princeton introductory sequence, compared to 30\% for Python, confirming that the student work for the assignment must be in Java.~\cite{COS 333 survey data}
+Data from other course surveys indicate that 90\% of students report themselves fluent in Java after the Princeton introductory sequence, compared to 30\% for Python, confirming that the student work for the assignment must be in Java.\footnote{TODO: COS 333 survey data}
 Given this constraint, and lacking any other language selection pressures, I elected to implement as much of the assignment code as possible in Java, with limited usage of scripting languages such as Python, Bash, and GNU Make.
 These scripting languages were used only where Java would not suffice and only where implementation details were irrelevant to student assignment comprehension.
 
@@ -173,12 +200,12 @@ Furthermore, by constructing new instances of student implementations between ga
 However, several default Java behaviors do not map cleanly onto the desired properties of strategy design exercises.
 For instance, Java objects used as function parameters are passed by mutable, nullable reference.
 This is in contrast to functional languages (including Ocaml and Rust), where parameters are immutable and non-null unless otherwise explicitly specified.
-Current industry standards for Java code obviate both of these issues using modern language features.~\cite{https://github.com/google/guava/wiki/UsingAndAvoidingNullExplained}~\cite{https://github.com/google/guava/wiki/ImmutableCollectionsExplained}~\cite{https://docs.oracle.com/javase/7/docs/api/java/util/Collections.html\#unmodifiableList(java.util.List)}
+Current industry standards for Java code obviate both of these issues using modern language features~\cite{guavanull, guavaimmutable, unmodlist}.
 In order to preserve backwards compatibility, these features are not implemented by default.
 Where possible, I have taken advantage of these features.
 Since the assignment specification documents that students are required not to modify parameters, instructor code can use unmodifiable (immutable) containers.
 However, I have not included \texttt{NotNull} annotations because they are not taught in the prerequisite courses and, as previously noted, these assignments should not require students to self-teach any programming skills.
-In my own framework code, which must be supported by future instructors, I decided to assume support for Java 9, released in fall 2016, and to use modern language features, since course instructors are at least as likely to have industry experience with modern Java code as experience with the Princeton introductory sequence.~\cite{https://www.techworld.com/news/developers/java-9-release-date-new-features-3660988/}
+In my own framework code, which must be supported by future instructors, I decided to assume support for Java 9, released in fall 2016~\cite{techworld}, and to use modern language features, since course instructors are at least as likely to have industry experience with modern Java code as experience with the Princeton introductory sequence.
 
 While of lesser urgency, I have also planned ahead to ensure the re-usability of my work.
 I elected to store this work in a University-owned private GitHub repository.
@@ -188,7 +215,7 @@ This ensures that future course staff will have the physical and technical means
 \section*{Implementation}
 Before the first problem set of the course was assigned in this semester, Professor Weinberg and I designed a handout interface and tools to allow students to test their strategies against each other, which I then implemented.
 The game simulates college admissions using stable matchings.
-While I implemented this handout with the explicit goal of producing a tool to test out multiple different student strategies in the specified application environment, I followed the principles of modular software design taught in COS 217.~\cite{Kernighan and Pike chapter 4}
+While I implemented this handout with the explicit goal of producing a tool to test out multiple different student strategies in the specified application environment, I followed the principles of modular software design taught in COS 217~\cite[Chapter~4]{tpop99}.
 I factored out the code which implemented the Gale-Shapley deferred acceptance algorithm for stable matchings from the code which performed randomized trials of the stable matchings and produced performance statistics for students.
 
 When it came time to implement the second strategy design exercise, I was able to reuse code which processed results of trials, even though the nature of the trials changed from college admissions to elections.
@@ -427,7 +454,7 @@ This mostly resolved the issue.
 
 \section*{Results}
 This project has already achieved minimum viable product by providing a framework for implementation of strategy design exercises in the current year of COS 445.
-These assignments and the framework I developed are documented and available at the course GitHub site.~\cite{https://github.com/PrincetonUniversity/cos445-hw/tree/s18 requires invite}
+These assignments and the framework I developed are documented and available at the course GitHub site~\cite{s18}.
 Thus, they will be available for reuse in future offerings of the course.
 
 While I have been unable to experimentally determine whether my project will be reused, I have evaluated my successful achievement of each other goal.
@@ -447,7 +474,7 @@ I have also succeeded at leveraging the extensibility of my project to improve s
 \item list resources created
 \item polling data about student usage
 \item empirical results about student error rates
-  ``Illegal submissions'' constitute student strategies which do not compile, throw exceptions, violate assertions, or otherwise behave outside of the parameters of the simulation.~\cite{Poorly performing strategies which obey the specification are legal.}
+  ``Illegal submissions'' constitute student strategies which do not compile, throw exceptions, violate assertions, or otherwise behave outside of the parameters of the simulation.\footnote{Poorly performing strategies which obey the specification are legal.}
   The illegal submission rate measures the percentage of students who were unable to develop a quality strategy for reasons other than lack of mastery of the course content.
 \end{itemize}
 
@@ -480,7 +507,7 @@ This will complicate the assignment handout process slightly, but will simplify 
 Earlier assignments were built off of earlier versions of the infrastructure and will need to be modified where they differ from newer versions when they are reused, but sharing code between assignments will prevent this inconsistency from developing again.
 
 Recently, I became aware of a Java interface for loading classes at run time.
-This technology, called ClassLoader,~\cite{https://docs.oracle.com/javase/9/docs/api/java/lang/ClassLoader.html} was implemented in the Spring 2014 handout code.
+This technology, called ClassLoader~\cite{classloader}, was implemented in the Spring 2014 handout code.
 I was unable to use ClassLoaders initially because I did not gain access to the Spring 2014 code until later in the semester.
 This simple modification will eliminate Python dependency currently required by \texttt{formatBase.py} and allow students to better understand and modify handout simulation code.
 
@@ -511,13 +538,12 @@ Thus, I am not being awarded both payment as a course assistant and credit as an
 Though students completed assignments developed from and optionally provided feedback for these assignments while enrolled in COS 445, these interactions were overseen and approved by Professor Weinberg.
 This paper represents my own work in accordance with university regulations.
 
-\bstctlcite{bstctl:etal, bstctl:nodash, bstctl:simpurl}
 \medskip
+\singlespacing{}
 \printbibliography[]
 
 \newpage
 \begin{appendices}
-  \singlespacing{}
   \appendixpage{}
   \section{\texttt{writeGrades} demonstrates modularity in post-processing}\label{appendix:writeGrades}
 \begin{minted}{java}
