--- a/references.bib
+++ b/references.bib
@@ -1,47 +1,241 @@
-@IEEEtranBSTCTL{bstctl:etal,
-  CTLuse_forced_etal = {yes},
-  CTLmax_names_forced_etal = {3},
+@book{tpop99,
+  Author = {Brian W. Kernighan and Rob Pike},
+  Title = {The Practice of Programming (Addison-Wesley Professional Computing Series)},
+  Publisher = {Addison-Wesley},
+  Year = {1999},
+  ISBN = {020161586X},
+  URL = {https://www.amazon.com/dp/020161586X}
 }
 
-@IEEEtranBSTCTL{bstctl:nodash,
-  CTLdash_repeated_names = {no},
+@online{coursesizes,
+  Author = {Office of the Registrar, Princeton University},
+  URL = {https://registrar.princeton.edu/course-offerings/},
+  URLDate = {2018-05-07},
+  year = 2018,
+  title = {Course Offerings}
 }
 
-@IEEEtranBSTCTL{bstctl:simpurl,
-  CTLname_url_prefix = {Available: },
+@online{cos445sp18,
+  Author = {Matt Weinberg},
+  URL = {https://www.cs.princeton.edu/~smattw/Teaching/cos445sp18.htm},
+  URLDate = {2018-05-07},
+  year = 2018,
+  title = {COS 445 SP 18}
 }
 
-@book{lamport94,
-    author    = "Leslie Lamport",
-    title     = "{\LaTeX: A Document Preparation System}",
-    year      = "1994",
-    publisher = "Addison-Wesley",
-    edition = "2nd",
-    address   = "Reading, Massachusetts"
+@online{cos445sp17review,
+  URL = {https://reg-captiva.princeton.edu/chart/index.php?terminfo=1184\&courseinfo=012095},
+  URLDate = {2018-05-07},
+  year = 2017,
+  Author = {Office of the Registrar, Princeton University},
+  Title = {Course Evaluation Results}
 }
 
-@inproceedings{nicepaper,
-  author = "Firstname1 Lastname1 and Firstname2 Lastname2",
-  title = "A Very Nice Paper To Cite",
-  year = "2000",
-  booktitle = "International Symposium on Computer Architecture"
+@online{cos445sp17,
+  URL = {https://web.archive.org/web/20170916042726/https://www.cs.princeton.edu/~smattw/Teaching/cos445sp17.htm},
+  Author = {Matt Weinberg},
+  URLDate = {2017-09-16},
+  year = 2017,
+  title = {COS 445 SP 17}
 }
 
-@inproceedings{nicepaper2,
-  author = "Firstname1 Lastname1 and Firstname2 Lastname2",
-  title = "Another Very Nice Paper To Cite",
-  year = "2001",
-  booktitle = "International Symposium on Computer Architecture"
+@online{cyrilzhang,
+  URL = {https://github.com/cyrilzhang},
+  Author = {Cyril Zhang},
+  URLDate = {2018-05-07},
+  year = 2018,
+  title = {cyrilzhang (Cyril Zhang)}
 }
 
-@inproceedings{Salzberg:2005,
- author = {Salzberg, Ben and Murphy, Trevor},
- title = {LaTeX: When {Word} Fails You},
- booktitle = {Proceedings of the 33rd Annual ACM SIGUCCS Conference on User Services},
- series = {SIGUCCS '05},
- year = {2005},
- location = {Monterey, CA, USA},
- pages = {241--243},
- publisher = {ACM},
- address = {New York, NY, USA},
-} 
+@online{s17,
+  URL = {https://github.com/PrincetonUniversity/cos445-hw/tree/s17},
+  URLDate = {2018-05-07},
+  year = 2018,
+  Author = {Cyril Zhang},
+  title = {cos445-hw at s17}
+  }
+
+@online{s18,
+  URL = {https://github.com/PrincetonUniversity/cos445-hw/tree/s18},
+  URLDate = {2018-05-07},
+  year = 2018,
+  Author = {Andrew Wonnacott},
+  title = {cos445-hw at s18}
+  }
+
+@online{coursehistory,
+  URL = {https://precourser.io/course/1184012095},
+  URLDate = {2018-05-07},
+  year = 2018,
+  Author = {Mel Shu with Office of the Registrar, Princeton University},
+  Title = {precourser | COS 445 Economics and Computing}
+  }
+
+@online{ynaamad,
+  URL = {https://github.com/ynaamad/},
+  URLDate = {2018-05-07},
+  year = 2018,
+  Author = {Yonatan Naamad},
+  Title = {ynaamad (Yonatan Naamad)}
+  }
+
+@online{googlecode,
+  URL = {https://code.google.com/archive/p/cos445-scripts/},
+  URLDate = {2018-05-07},
+  year = 2012,
+  Author = {Yonatan Naamad},
+  Title = {cos445-scripts}
+  }
+
+@online{f12,
+  URL = {https://github.com/PrincetonUniversity/cos445-hw/tree/f12},
+  URLDate = {2018-05-07},
+  year = 2018,
+  Author = {Yonatan Naamad},
+  title = {cos445-hw at f12}
+  }
+
+@online{s14,
+  URL = {https://github.com/PrincetonUniversity/cos445-hw/tree/s14},
+  URLDate = {2018-05-07},
+  year = 2018,
+  Author = {Yonatan Naamad},
+  title = {cos445-hw at s14}
+  }
+
+@online{harvard,
+  URL = {https://beta.blogs.harvard.edu/k108875/},
+  URLDate = {2018-05-07},
+  year = 2017,
+  Author = {David C. Parkes},
+  title = {Computer Science 136 | Economics and Computation}
+  }
+
+@online{stanford364a,
+  URL = {https://theory.stanford.edu/~tim/364a.html},
+  URLDate = {2018-05-07},
+  year = 2004,
+  Author = {Tim Roughgarden},
+  title = {Algorithmic Game Theory (CS364A), Fall 2004}
+  }
+
+@online{stanfordf16,
+  URL = {https://theory.stanford.edu/~tim/f16/f16.html},
+  URLDate = {2018-05-07},
+  year = 2016,
+  Author = {Tim Roughgarden},
+  title = {CS269I: Incentives in Computer Science}
+  }
+
+@online{cornell,
+  URL = {https://www.cs.cornell.edu/courses/cs6840/2014sp/},
+  URLDate = {2018-05-07},
+  year = 2014,
+  Author = {Eva Tardos},
+  title = {Algorithmic Game Theory}
+  }
+
+@online{uw,
+  URL = {https://courses.cs.washington.edu/courses/cse522/05sp/},
+  URLDate = {2018-05-07},
+  year = 2005,
+  Author = {Anna Karlin},
+  title = {CSE 522 - Algorithmic Game Theory, Spring 2005}
+  }
+
+@online{yale,
+  URL = {https://zoo.cs.yale.edu/classes/cs455/fall11/},
+  URLDate = {2018-05-07},
+  year = 2011,
+  Author = {Joan Feigenbaum},
+  title = {CPSC455/555 // ECON425/563: Economics and Computation}
+  }
+
+@online{penn,
+  URL = {https://www.cis.upenn.edu/~aaroth/courses/agtS15.html},
+  URLDate = {2018-05-07},
+  year = 2015,
+  Author = {Aaron Roth},
+  title = {Algorithmic Game Theory}
+  }
+
+@online{gtech,
+  URL = {https://web.archive.org/web/20131002121909/https://www.cc.gatech.edu/\%7Eninamf/LGO10/index.html},
+  URLDate = {2013-10-02},
+  year = 2010,
+  Author = {Maria Florina Balcan},
+  title = {8803 Connections between Learning, Game Theory, and Optimization, Fall 2010}
+  }
+
+@online{mit,
+  URL = {https://people.csail.mit.edu/costis/6853fa2011/},
+  URLDate = {2018-05-07},
+  year = 2011,
+  Author = {Constantinos Daskalakis},
+  title = {6.853: Topics in Algorithmic Game Theory, Fall 2011}
+  }
+
+@online{cmu,
+  URL = {https://www.cs.cmu.edu/~arielpro/15896s16/index.html},
+  URLDate = {2018-05-07},
+  year = 2016,
+  Author = {Ariel Procaccia},
+  title = {CMU 15-896: Truth, Justice, and Algorithms}
+  }
+
+@online{duke,
+  URL = {https://www2.cs.duke.edu/courses/spring16/compsci590.4/},
+  URLDate = {2018-05-07},
+  year = 2016,
+  Author = {Vincent Conitzer},
+  title = {CPS 590.4 - Computational Microeconomics: Game Theory, Social Choice, and Mechanism Design}
+  }
+
+@online{csdropbox,
+  URL = {https://csguide.cs.princeton.edu/academic/csdropbox},
+  URLDate = {2018-05-07},
+  year = 2018,
+  Author = {Department of Computer Science, Princeton University},
+  title = {CS DropBox - Course File Submission System}
+  }
+
+@online{guavanull,
+  URL = {https://github.com/google/guava/wiki/UsingAndAvoidingNullExplained},
+  URLDate = {2018-05-07},
+  year = 2017,
+  Author = {Google, Inc.},
+  title = {Using and avoiding null}
+  }
+
+@online{guavaimmutable,
+  URL = {https://github.com/google/guava/wiki/ImmutableCollectionsExplained},
+  URLDate = {2018-05-07},
+  year = 2017,
+  Author = {Google, Inc.},
+  title = {Immutable Collections}
+  }
+
+@online{unmodlist,
+  URL = {https://docs.oracle.com/javase/9/docs/api/java/util/Collections.html#unmodifiableList-java.util.List-},
+  URLDate = {2018-05-07},
+  year = 2017,
+  Author = {Oracle},
+  title = {Collections (Java SE 9 \& JDK 9)}
+  }
+
+@online{classloader,
+  URL = {https://docs.oracle.com/javase/9/docs/api/java/lang/ClassLoader.html},
+  URLDate = {2018-05-07},
+  year = 2017,
+  Author = {Oracle},
+  title = {ClassLoader (Java SE 9 \& JDK 9)}
+  }
+
+@online{techworld,
+  URL = {https://www.techworld.com/news/developers/java-9-release-date-new-features-3660988/},
+  URLDate = {2018-05-07},
+  year = 2017,
+  Author = {Christina Mercer},
+  title = {Java 9: Release date and new features}
+  }
+
